src/components/Latest/Latest.css
.latest {
  background: green;
  position: relative;
  padding: 0 20%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.latestArticles {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  min-height: 1000px;
  row-gap: 20px;
  column-gap: 20px;
  align-items: center;
}

.allNewsBtn {
  align-self: center;
  height: 50px;
  border: 1px solid gray;
  border-radius: 50px;
  padding: 10px 30px;
}

@media (max-width: 1020px) {
  .latestArticles {
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr 1fr;
  }
}
@media (max-width: 770px) {
  .latestArticles {
    grid-template-columns: 1fr;
    grid-template-rows: repeat(8, 1fr);
  }
}

